# ASCOT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  batch_process.py  diagnose_confidence.py  dust.py  monetio_issue_report.md  pyproject.toml  run_test.py  viz.py
.github/workflows/: ci.yml  update_dashboard.yml
docs/: index.html  test_feb_2023.html
scripts/: generate_dashboard.py  repro_feb_2023_test.py
src/: batch_process.py  dashboard.py  dust.py  viz.py
tests/: test_batch.py  test_cli.py  test_dust.py  test_viz.py
