[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dusttrace"
version = "1.1.0"
authors = [
  { name="Barry D. Baker", email="Barry.Baker@noaa.gov" },
]
description = "ARL surface wind-blown dust detection algorithm"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
dependencies = [
    "monetio",
    "xarray",
    "dask",
    "pandas",
    "netcdf4",
    "cartopy",
    "hvplot",
    "geoviews",
    "bottleneck",
    "panel",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.ruff]
line-length = 132
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.sources]
monetio = { git = "https://github.com/bbakernoaa/monetio.git", branch = "switch-to-uv-ci-12392808968856270812" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["batch_process", "dashboard", "dust", "viz"]
